--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -299,7 +299,6 @@ replace = TRUE))
 bootstrap_samplemeans <- bootstrap_samplemeans %>%
 rename(boostrap_samplemeans = mean)
 head(bootstrap_samplemeans)
-
 ```
 
 In the chart above we see the estimated summary taken on the sample population of those over the age of 25 who's capital gain is greater than 0. This data can be used to calculate errors and perform hypothesis test to further support our research.
@@ -310,13 +309,13 @@ In the chart above we see the estimated summary taken on the sample population o
 
 The average capital gains value within a sample of this population is assumed to be greater than $20000 USD. Is this supported by the data?
 
-H0 : The average capital gains amount for an individual equal to or above the age of 25 flagged as being high value is greater than or equal to $20000.
+H0 : The average capital gains amount for an individual equal to or above the age of 25 flagged as being high value is equal to $20000.
 
-Ha : The average capital gains amount for an individual equal to or above the age of 25 flagged as being high value is less than $20000.
+Ha : The average capital gains amount for an individual equal to or above the age of 25 flagged as being high value is not equal to $20000.
 
-H0 : µ >= 20000
+H0 : µ = 20000
 
-Ha : µ < 20000
+Ha : µ != 20000
 
 To compute the p-value, we assume that the null hypothesis is true and we’ll set the significance level at 5%.
 
@@ -358,7 +357,7 @@ p_value <- sum(bootstrap$mean >= mean_sample)/1000
 cat("p-value is equal to:",p_value)
 ```
 
-Since the p-value is greater than 0.05, We fail to reject the null hypothesis. The data do not provide convincing evidence at the .05 significance level that the average capital gains value is greater than 20000. As we fail to reject the null hypothesis, we can prove that those older than 25 and have a capital gain greater than 20000 USD, than they are more likely to be a high value customer. The information we have now can be used to conclude that age and capital gain do play a role in predicting high value clients. The variable that we focus on with the test would be age in years greater than 25 and a capital gain greater than 0.
+Since the p-value is greater than 0.05, We fail to reject the null hypothesis. The data do not provide convincing evidence at the .05 significance level that the average capital gains value is not equal to 20000. As we fail to reject the null hypothesis, it is feasible to assume that those that are older than 25 and a high value policyholder are likely to have an average capital gain of $20000. The information we have now can be used to conclude that age and capital gain do play a role in predicting high value clients. The variable that we focus on with the test would be age in years greater than 25 and a capital gain greater than 0.
 
 
 -   Discuss at least one bootstrap confidence interval, at least one
