--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -421,7 +421,7 @@ data %>%
     the introduction section. Make sure to pose possible questions based
     on graphs, tables, and other inferential results.
     
-    	This is a general overview of what risk assessment for an insurance policyholder would look like. With the data provided, we were able to select pertinent variables, both numerical and categorical, and identify the various associations between the variables which would contribute to the predictions of a policyholder being high or low value. Graphs were made to further analyze patterns. Bootstrap hypothesis testing was used to look at sample distributions of capital gains and affirm its connection to value flagging. The association between level of education and capital gains also was explored in order to ascertain their relative weights within a possible prediction model. In the end, based on the nature of the variables provided and the associations found, a support vector machine model was used to predict whether a potential customer would be high or low value.
+    	This is a general overview of what risk assessment for an insurance policyholder would look like. With the data provided, we were able to select pertinent variables: both numerical and categorical. We identified various associations between the variables which could contribute to the predictions of a policyholder being high or low value. Graphs were made to analyze patterns. Bootstrap hypothesis testing was used to look at sample distributions of capital gains and affirm its connection to value flagging. The association between level of education and capital gains also was explored in order to ascertain their relative weights within a possible prediction model. In the end, based on the nature of the variables provided and the associations found, a support vector machine model was used to predict whether a potential customer would be high or low value.
 	The most important part of our project was to trace any relationship between the flag status of a client and other variables presented in the table.  But why is it essential to identify high-value customers? Here are presented several reasons to look for high value customers: 	
   - Knowing your high-value customers helps you to plan ahead and make better decisions about future projects.
   - You can maximize their value and develop longer-lasting relationships.
